Small change to test git functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h2>// About Me //</h2>
 				<p>
 					I'm an IT and media student who somehow sees installing and
-					reinstalling their OS a fun afternoon activity
+					reinstalling their OS a fun afternoon activity.
 				</p>
 			</div>
 		</main>
