Expanded about me and changed a class name

--- a/index.html
+++ b/index.html
@@ -4,21 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Velkee's Corner</title>
+		<title>Fenic's Corner</title>
 		<link rel="stylesheet" href="./css/style.css" />
 		<script src="./scripts/konami.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Hi! I'm Fenic, also know as Velkee</h1>
+			<h1>Fenic's Corner</h1>
 		</header>
 		<main>
-			<div class="aboutme">
+			<div class="centered_justify">
 				<h2>// About Me //</h2>
+				<h3>Hi! I'm Fenic, also know as Velkee</h3>
 				<p>
-					I'm an IT and media student who somehow sees installing and
-					reinstalling their OS a fun afternoon activity.
+					I'm an IT and media student with a love for open source
+					software and technology, video games, and digital art.
 				</p>
+			</div>
+
+			<div class="centered_justify">
+				<h2>// My Projects //</h2>
+			</div>
+
+			<div class="centered_justify">
+				<h2>// School Tasks //</h2>
 			</div>
 		</main>
 	</body>
