the most tiny update (shortened the introduction)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h3>Hi! I'm Fenic, also know as Velkee</h3>
 				<p>
 					I'm an IT and media student with a love for open source
-					software and technology, video games, and digital art.
+					technology, video games, and digital art.
 				</p>
 			</div>
 
