Made text centered and added more meat to the website's bones

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
 			<div class="centered_justify">
 				<h2>// My Projects //</h2>
-			</div>
-
-			<div class="centered_justify">
-				<h2>// School Tasks //</h2>
+				<p>
+					These are the projects I've worked on in my free time,
+					either just for the love of it or because it served a
+					spesific purpose when I made it.
+				</p>
 			</div>
 		</main>
 	</body>
