Updated my student status

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<h2>// About Me //</h2>
 				<h3>Hi! I'm Fenic, also know as Velkee</h3>
 				<p>
-					I'm an IT and media student with a love for open source
-					technology, video games, and digital art.
+					I'm an ITK student with a love for open source technology,
+					video games, and digital art.
 				</p>
 			</div>
 
