Added a flex system for project links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Fenic's Corner</title>
 
 		<link
 			rel="apple-touch-icon"
@@ -37,6 +36,7 @@
 		/>
 		<meta name="theme-color" content="#323232" />
 
+		<title>Fenic's Corner</title>
 		<link rel="stylesheet" href="/css/style.css" />
 		<script src="/scripts/konami.js"></script>
 	</head>
@@ -44,6 +44,7 @@
 		<header>
 			<h1>Fenic's Corner</h1>
 		</header>
+
 		<main>
 			<div class="centered_justify">
 				<h2>// About Me //</h2>
@@ -59,8 +60,14 @@
 				<p>
 					These are the projects I've worked on in my free time,
 					either just for the love of it or because it served a
-					spesific purpose when I made it.
+					specific purpose when I made it.
 				</p>
+
+				<div class="waffles">
+					<a href="/tasv">
+						<h3>T.A.S.V.</h3>
+					</a>
+				</div>
 			</div>
 		</main>
 	</body>
