--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</p>
 
 				<div class="waffles">
-					<a href="./tasv.html">
+					<a href="/tasv">
 						<h3>T.A.S.V.</h3>
 					</a>
 				</div>
